add services and price page

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" aria-current="page">PORTPOLIO</a>
+            <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" aria-current="page">PRICING</a>
+            <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -105,10 +105,10 @@
                 <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PORTPOLIO</a>
+                <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PRICING</a>
+                <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -399,7 +399,7 @@
                 </div>
               </div>
           </div>
-          <div class="accordion-container2">
+          <div class="accordion-container2" id="news">
             <div class="accordion" id="accordion2">
               <div class="accordion-item" id="accordion-item2">
                 <h2 class="accordion-header" id="headingTwo">
