--- a/about.html
+++ b/about.html
@@ -61,10 +61,10 @@
             <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" aria-current="page">PORTPOLIO</a>
+            <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" aria-current="page">PRICING</a>
+            <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -91,10 +91,10 @@
                     <a href="about.html" class="dropdown-item">COMPANY</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">OUR TEAM</a>
+                    <a href="#our-team" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">NEWS</a>
+                    <a href="#news" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -105,10 +105,10 @@
                 <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PORTPOLIO</a>
+                <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PRICING</a>
+                <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -182,7 +182,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4">
+                <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4" id="news">
                     <div>
                         <h3>Our Solution</h3>
                     </div>
@@ -234,7 +234,7 @@
       </div>
     </div>
   </div>
-  <section class="py-4">
+  <section class="py-4" id="our-team">
     <div class="px-4 d-flex justify-content-center align-items-center flex-start">
       <div class="team-inner-container col-8">
         <div>
